--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/marina-seamore/movies-explorer-api#readme",
   "dependencies": {
+    "body-parser": "^1.19.1",
+    "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.5",
     "nodemon": "^2.0.15",
