--- a/package.json
+++ b/package.json
@@ -19,14 +19,21 @@
   },
   "homepage": "https://github.com/marina-seamore/movies-explorer-api#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "celebrate": "^15.0.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "eslint": "^8.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
     "express": "^4.17.2",
+    "express-winston": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
     "nodemon": "^2.0.15",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "^3.4.0"
   }
 }
