--- a/.eslintrc
+++ b/.eslintrc
@@ -2,14 +2,6 @@
   "extends": "airbnb-base",
   "rules": {
     "no-underscore-dangle": "off",
-    "linebreak-style": "off",
-    "indent": [ 2, 4 ],
-    "no-console": "off",
-    "object-curly-newline": [
-      "error",
-      {
-        "multiline": true
-      }
-    ]
+    "commonjs": "true"
   }
 }
